<resources>
    <string name="app_name">UtilitiesK</string>
    <string name="title_myutility">UtilitiesK</string>
    <string name="navigation_drawer_open">Open navigation drawer</string>
    <string name="navigation_drawer_close">Close navigation drawer</string>
    <string name="nav_header_title">UtilitiesK</string>
    <string name="nav_header_subtitle">household utilities manager</string>
    <string name="nav_header_desc">Navigation header</string>
    <string name="nav_header_total">Total: $</string>
    <string name="action_period">Change Period</string>
    <string name="action_chart">Change Utility</string>
    <string name="action_delete_bill">DELETE</string>

    <string name="drawer_settings">Settings</string>
    <string name="drawer_statistics">Statistics</string>
    <string name="drawer_payments">Payments</string>
    <string name="drawer_records">Records</string>
    <string name="drawer_export">Export Records</string>
    <string name="drawer_import">Import Records</string>
    <string name="drawer_rec_payments">Recurring payments</string>
    <string name="drawer_reports">Reports</string>
    <string name="drawer_charts">Usage</string>
    <string name="export_google">Google Drive backup</string>
    <string name="export_drop">Dropbox backup</string>
    <string name="export_device">Device backup</string>
    <string name="export_backup">BACKUP</string>
    <string name="export_where">WHERE</string>
    <string name="import_google">From Google Drive</string>
    <string name="import_drop">From Dropbox</string>
    <string name="import_device">From Device</string>
    <string name="import_default">Default</string>
    <string name="import_restore">RESTORE</string>
    <string name="import_select">SELECT</string>
    <string name="drawer_clean">Clean Records</string>

    <string name="utility_hydro">Hydro</string>
    <string name="utility_hydro_details">Hydro Details</string>
    <string name="utility_heat_details">Heat Details</string>
    <string name="utility_phone_details">Phone Details</string>
    <string name="utility_water_details">Water Details</string>
    <string name="utility_statement_date">Statement Date:</string>
    <string name="utility_amount_due">Amount Due ($):</string>
    <string name="utility_due_date">Due Date:</string>
    <string name="utility_price">$289.39</string>
    <string name="electra">Electra</string>
    <string name="_12910920_11">12910920-11</string>
    <string name="_111">111</string>
    <string name="_1234_00">1234.00</string>
    <string name="date">Jan 01, 2020</string>
    <string name="date_month">Jan, 2020</string>
    <string name="add_date">date</string>
    <string name="dashboard">Dashboard</string>
    <string name="utilities">Utilities</string>
    <string name="close">CLOSE</string>
    <string name="title_hydro">Hydro</string>
    <string name="title_heat">Heat</string>
    <string name="title_water">Water \u0026 Severs</string>
    <string name="title_phone">Phone</string>
    <string name="title_period">Change Period</string>
    <string name="title_utility_chart">Change Utility</string>
    <string name="button_period">Update Period</string>
    <string name="zero_period">Current Year</string>
    <string name="hydro_details">DETAILS:</string>
    <string name="hydro_add_payment">ADD PAYMENT</string>
    <string name="hydro_update_payment">UPDATE PAYMENT</string>
    <string name="hydro_on_peak_pay">On-Peak ($):</string>
    <string name="hydro_on_mid_pay">On-Mid ($):</string>
    <string name="hydro_off_peak_pay">Off-Peak ($):</string>
    <string name="hydro_zero_used">(kWh) 0.00</string>
    <string name="water_water_pay">Water ($):</string>
    <string name="water_waste_pay">Waste ($):</string>
    <string name="water_storm_pay">Storm ($):</string>
    <string name="water_zero_used">(m3) 0.00</string>
    <string name="water_zero_days">(days) 0</string>
    <string name="heat_gas_pay">Gas ($):</string>
    <string name="bell_tv_pay">TV ($):</string>
    <string name="bell_internet_pay">Internet ($):</string>
    <string name="bell_line_pay">Home phone ($):</string>
    <string name="ContentDescription">content description</string>
    <string name="oops">OOPS</string>
    <string name="Done">DONE</string>
    <string name="Cancel">CANCEL</string>
    <string name="not_valid_fields">Some fields are empty!</string>
    <string name="sure_delete_bill">This (%1$s) bill will be deleted!</string>
    <string name="attention">ATTENTION</string>

    <string name="EmptyKWh">(kWh) 0.0</string>
    <string name="EmptyM3">(m3) 0.0</string>
    <string name="Year2018">Year 2018</string>
    <string name="Year2019">Year 2019</string>

    <string name="chart_hydro">Hydro</string>
    <string name="chart_heat">Heat</string>
    <string name="chart_water">Water \u0026 Severs</string>
    <string name="chart_phone">Phone</string>

</resources>
