<?xml version="1.0" encoding="utf-8"?>
<menu xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:tools="http://schemas.android.com/tools"
    tools:showIn="navigation_view">

    <group
        android:id="@+id/grp1"
        android:checkableBehavior="single">
        <item
            android:id="@+id/nav_statistics"
            android:icon="@drawable/ic_format_align_left_black_24dp"
            android:title="@string/drawer_statistics" />
        <item
            android:id="@+id/nav_manage"
            android:icon="@drawable/ic_menu_manage"
            android:title="@string/drawer_settings" />
    </group>

    <group
        android:id="@+id/grp2"
        android:checkableBehavior="single">
        <item
            android:id="@+id/nav_export"
            android:icon="@drawable/ic_file_upload_black_24dp"
            android:title="@string/drawer_export" />
        <item
            android:id="@+id/nav_import"
            android:icon="@drawable/ic_file_download_black_24dp"
            android:title="@string/drawer_import" />
        <item
            android:id="@+id/nav_clean"
            android:icon="@drawable/ic_filter_none_black_24dp"
            android:title="@string/drawer_clean" />
    </group>

</menu>
