<?xml version="1.0" encoding="utf-8"?>
<menu xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto">
    <item
        android:id="@+id/action_period_current"
        android:title="@string/zero_period"
        android:orderInCategory="100"
        app:showAsAction="never" />
    <item
        android:id="@+id/action_period_2020"
        android:title="@string/Year2020"
        android:orderInCategory="100"
        app:showAsAction="never" />
    <item
        android:id="@+id/action_period_2019"
        android:title="@string/Year2019"
        android:orderInCategory="100"
        app:showAsAction="never" />
    <item
        android:id="@+id/action_period_2018"
        android:title="@string/Year2018"
        android:orderInCategory="100"
        app:showAsAction="never" />
</menu>
