<RelativeLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    tools:context="com.brightkey.nickfl.fragments.ExportFragment">

    <RadioGroup
        android:id="@+id/radioGroup"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_centerHorizontal="true"
        android:layout_marginTop="40dp">

        <RadioButton
            android:id="@+id/radioButtonGoogle"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_marginBottom="10dp"
            android:layout_weight="1"
            android:paddingLeft="10dp"
            android:text="@string/export_google"
            android:textSize="24sp" />

        <RadioButton
            android:id="@+id/radioButtonDrop"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_marginBottom="10dp"
            android:layout_weight="1"
            android:paddingLeft="10dp"
            android:text="@string/export_drop"
            android:textSize="24sp" />

        <RadioButton
            android:id="@+id/radioButtonDevice"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_weight="1"
            android:checked="true"
            android:paddingLeft="10dp"
            android:text="@string/export_device"
            android:textSize="24sp" />

    </RadioGroup>

    <Button
        android:id="@+id/buttonBackup"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_below="@+id/radioGroup"
        android:layout_centerHorizontal="true"
        android:layout_marginTop="40dp"
        android:text="@string/export_backup" />

</RelativeLayout>
