<?xml version="1.0" encoding="utf-8"?>
<navigation xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:id="@+id/nav_graph"
    app:startDestination="@id/dashboardFragment">

    <fragment
        android:id="@+id/dashboardFragment"
        android:name="com.brightkey.nickfl.myutilities.fragments.DashboardFragment"
        android:label="@string/title_myutility"
        tools:layout="@layout/fragment_dashboard" >
        <action
            android:id="@+id/action_dashboardFragment_to_timeDetailsFragment"
            app:destination="@id/timeDetailsFragment"
            app:enterAnim="@anim/enter_from_right"
            app:exitAnim="@anim/exit_to_left" />
        <action
            android:id="@+id/action_dashboardFragment_to_periodFragment"
            app:destination="@id/periodFragment"
            app:enterAnim="@anim/enter_from_bottom"
            app:exitAnim="@anim/exit_to_bottom" />
        <action
            android:id="@+id/action_dashboardFragment_to_chartFragment"
            app:destination="@id/chartFragment" />
    </fragment>

    <fragment
        android:id="@+id/timeDetailsFragment"
        android:name="com.brightkey.nickfl.myutilities.fragments.TimeDetailsFragment"
        android:label="fragment_time_details"
        tools:layout="@layout/fragment_time_details" >
        <action
            android:id="@+id/action_timeDetailsFragment_to_hydroFragment"
            app:destination="@id/hydroFragment"
            app:enterAnim="@anim/enter_from_right"
            app:exitAnim="@anim/exit_to_left" />
        <action
            android:id="@+id/action_timeDetailsFragment_to_phoneFragment"
            app:destination="@id/phoneFragment"
            app:enterAnim="@anim/enter_from_right"
            app:exitAnim="@anim/exit_to_left" />
        <action
            android:id="@+id/action_timeDetailsFragment_to_waterFragment"
            app:destination="@id/waterFragment"
            app:enterAnim="@anim/enter_from_right"
            app:exitAnim="@anim/exit_to_left" />
        <action
            android:id="@+id/action_timeDetailsFragment_to_heatFragment"
            app:destination="@id/heatFragment"
            app:enterAnim="@anim/enter_from_right"
            app:exitAnim="@anim/exit_to_left" />
        <argument
            android:name="billType"
            app:argType="string"
            android:defaultValue="hydro_bill" />
    </fragment>

    <fragment
        android:id="@+id/heatFragment"
        android:name="com.brightkey.nickfl.myutilities.fragments.HeatFragment"
        android:label="@string/title_heat"
        tools:layout="@layout/fragment_heat" >
        <argument
            android:name="editBillHeat"
            app:argType="com.brightkey.nickfl.myutilities.models.UtilityEditModel" />
    </fragment>

    <fragment
        android:id="@+id/hydroFragment"
        android:name="com.brightkey.nickfl.myutilities.fragments.HydroFragment"
        android:label="@string/title_hydro"
        tools:layout="@layout/fragment_hydro" >
        <argument
            android:name="editBillHydro"
            app:argType="com.brightkey.nickfl.myutilities.models.UtilityEditModel" />
    </fragment>

    <fragment
        android:id="@+id/phoneFragment"
        android:name="com.brightkey.nickfl.myutilities.fragments.PhoneFragment"
        android:label="@string/title_phone"
        tools:layout="@layout/fragment_phone" >
        <argument
            android:name="editBillBell"
            app:argType="com.brightkey.nickfl.myutilities.models.UtilityEditModel" />
    </fragment>

    <fragment
        android:id="@+id/waterFragment"
        android:name="com.brightkey.nickfl.myutilities.fragments.WaterFragment"
        android:label="@string/title_water"
        tools:layout="@layout/fragment_water" >
        <argument
            android:name="editBillWater"
            app:argType="com.brightkey.nickfl.myutilities.models.UtilityEditModel" />
    </fragment>

    <fragment
        android:id="@+id/importFragment"
        android:name="com.brightkey.nickfl.myutilities.fragments.ImportFragment"
        android:label="@string/drawer_import" />

    <fragment
        android:id="@+id/exportFragment"
        android:name="com.brightkey.nickfl.myutilities.fragments.ExportFragment"
        android:label="@string/drawer_export" />

    <fragment
        android:id="@+id/chartFragment"
        android:name="com.brightkey.nickfl.myutilities.fragments.ChartFragment"
        android:label="@string/title_utility_chart"
        tools:layout="@layout/fragment_chart" >
        <action
            android:id="@+id/action_chartFragment_to_utilityFragment"
            app:destination="@id/utilityFragment"
            app:enterAnim="@anim/enter_from_bottom"
            app:exitAnim="@anim/exit_to_bottom" />
        <argument
            android:name="chartModel"
            app:argType="com.brightkey.nickfl.myutilities.models.ChartModel" />
    </fragment>

    <fragment
        android:id="@+id/periodFragment"
        android:name="com.brightkey.nickfl.myutilities.fragments.PeriodFragment"
        android:label="@string/title_period"
        tools:layout="@layout/fragment_period" >
        <argument
            android:name="periodNow"
            app:argType="string"
            android:defaultValue="Current Year" />
    </fragment>

    <fragment
        android:id="@+id/utilityFragment"
        android:name="com.brightkey.nickfl.myutilities.fragments.UtilityFragment"
        android:label="@string/title_utility_chart"
        tools:layout="@layout/fragment_utility" >
        <argument
            android:name="chartType"
            app:argType="string"
            android:defaultValue="hydro_bill" />
        <action
            android:id="@+id/action_utilityFragment_to_chartFragment"
            app:destination="@id/chartFragment" />
    </fragment>

</navigation>