<ScrollView xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    tools:context="com.brightkey.nickfl.myutilities.fragments.PhoneFragment">

    <RelativeLayout
        android:layout_width="match_parent"
        android:layout_height="wrap_content">

        <ImageView
            android:id="@+id/imagePhoneLogo"
            android:layout_width="wrap_content"
            android:layout_height="60dp"
            android:layout_alignParentTop="true"
            android:layout_centerHorizontal="true"
            android:layout_marginTop="20dp"
            android:contentDescription="@string/ContentDescription"
            android:src="@drawable/bell_logo" />

        <TextView
            android:id="@+id/textPhoneAcc"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_below="@+id/imagePhoneLogo"
            android:layout_centerHorizontal="true"
            android:layout_marginTop="20dp"
            android:text="@string/_12910920_11"
            android:textSize="24sp" />

        <include
            android:id="@+id/includeStatementData"
            layout="@layout/layout_statement"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:layout_below="@+id/textPhoneAcc"
            android:layout_marginTop="20dp" />

        <TextView
            android:id="@+id/textViewDetails"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_below="@+id/includeStatementData"
            android:layout_centerHorizontal="true"
            android:layout_marginTop="20dp"
            android:contentDescription="@string/ContentDescription"
            android:text="@string/hydro_details"
            android:textSize="20sp"
            android:textStyle="bold" />

        <include
            android:id="@+id/includeOnPeak"
            layout="@layout/layout_amount_price"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:layout_below="@+id/textViewDetails"
            android:layout_centerHorizontal="true"
            android:layout_marginTop="10dp" />

        <include
            android:id="@+id/includeOnMid"
            layout="@layout/layout_amount_price"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:layout_below="@+id/includeOnPeak"
            android:layout_centerHorizontal="true"
            android:layout_marginTop="5dp" />

        <include
            android:id="@+id/includeOffPeak"
            layout="@layout/layout_amount_price"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:layout_below="@+id/includeOnMid"
            android:layout_centerHorizontal="true"
            android:layout_marginTop="5dp" />

        <Button
            android:id="@+id/buttonAddPhonePayment"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_below="@+id/includeOffPeak"
            android:layout_centerHorizontal="true"
            android:layout_marginTop="25dp"
            android:text="@string/hydro_add_payment" />

    </RelativeLayout>

</ScrollView>
